# rag_pipeline

./: .gitignore  Dockerfile  Makefile  chainlit.md  main.py  pyproject.toml  test.py
documents/: autoloads_versus_internal_nodes.html  data_preferences.html  godot_interfaces.html  godot_notifications.html  index.html  introduction_best_practices.html  logic_preferences.html  node_alternatives.html  project_organization.html  scene_organization.html  scenes_versus_scripts.html  version_control_systems.html  what_are_godot_classes.html
prompts/: INSTRUCTION_CHATTY.md  INSTRUCTION_STRICT.md
public/: theme.json
src/: __init__.py  base_documentation_loader.py  chainlit_app.py  config.py  cross_encoder_rerank_threshold.py  document_indexer.py  documentation_loader.py  file_documentation_loader.py  file_fetch_documentation_loader.py  git_documentation_loader.py  online_documentation_loader.py  rag_chain.py
src/documentation_loader/: base_documentation_loader.py  doc_parser.py  file_documentation_loader.py  file_fetch_documentation_loader.py  git_documentation_loader.py  online_documentation_loader.py
