[project]
name = "rag-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "argparse>=1.4.0",
    "bs4>=0.0.2",
    "chainlit>=2.9.6",
    "fastembed>=0.7.4",
    "langchain>=1.2.10",
    "langchain-classic>=1.0.1",
    "langchain-community>=0.4.1",
    "langchain-mistralai>=1.1.1",
    "langchain-ollama>=1.0.1",
    "langchain-qdrant>=1.1.0",
    "langchain-text-splitters>=1.1.1",
    "langfuse>=3.14.5",
    "lxml>=6.0.2",
    "ollama>=0.6.1",
    "qdrant-client>=1.17.0",
    "sentence-transformers>=5.2.3",
    "stream-unzip>=0.0.101",
    "tiktoken>=0.12.0",
    "tqdm>=4.67.3",
]
